[package]
name = "jockey"
description = "Easy command line parsing for Rust"
version = "0.3.0"
authors = ["Richard Wiedenhöft <richard@wiedenhoeft.xyz>"]
license = "MIT"
repository = "https://github.com/richard-w/jockey"
publish = false

[dev-dependencies]
jockey_derive = { path = "../jockey_derive" }
