[package]
name = "jockey"
description = "Custom command-line parsers that practically write themselves"
version = "0.3.0"
authors = ["Richard Wiedenhöft <richard@wiedenhoeft.xyz>"]
license = "MIT"
repository = "https://github.com/richard-w/jockey"
publish = false

[dev-dependencies]
jockey_derive = { path = "../jockey_derive" }
