[package]
name = "jockey_derive"
description = "Implementation of #[derive(JockeyArguments)] for the jockey crate"
version = "0.1.0"
authors = ["Richard Wiedenhöft <richard@wiedenhoeft.xyz>"]
license = "MIT"
repository = "https://github.com/richard-w/jockey"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4.24"
quote = "0.6.10"
syn = "0.15.22"
