[package]
name = "jockey_derive"
description = "Implementation of #[derive(Arguments)] for the jockey crate"
version = "0.3.0"
authors = ["Richard Wiedenhöft <richard@wiedenhoeft.xyz>"]
license = "MIT"
repository = "https://github.com/richard-w/jockey"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4.24"
quote = "0.6.10"
syn = "0.15.22"

[dev-dependencies]
jockey = { version="^0", path = "../jockey" }
