[package]
name = "jockey_derive"
description = "Implementation of #[derive(Arguments)] for the jockey crate"
version = "0.4.0"
authors = ["Richard Wiedenhöft <richard@wiedenhoeft.xyz>"]
license = "MIT"
repository = "https://github.com/richard-w/jockey"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"
derive-new = "0.5"

[dependencies.syn]
version = "0.15"
features = ["extra-traits"]

[dev-dependencies]
jockey = { version="^0", path = "../jockey" }
